--- a/package.json
+++ b/package.json
@@ -1,64 +1,77 @@
 {
-  "name": "starter-ts",
+  "name": "modern-rembg",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.0",
   "packageManager": "pnpm@7.26.2",
-  "description": "Starter template for TypeScript library",
+  "description": "A remove image background javascript lib. only ESM.",
   "author": "wxm",
   "license": "MIT",
-  "homepage": "https://github.com/qq15725/starter-ts",
+  "homepage": "https://github.com/qq15725/modern-rembg",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/qq15725/starter-ts.git"
+    "url": "git+https://github.com/qq15725/modern-rembg.git"
   },
   "bugs": {
-    "url": "https://github.com/qq15725/starter-ts/issues"
+    "url": "https://github.com/qq15725/modern-rembg/issues"
   },
   "keywords": [
-    "starter",
-    "template",
-    "typescript"
+    "background-removal",
+    "client-side",
+    "data-privacy",
+    "image-segmentation",
+    "image-matting",
+    "onnx"
   ],
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./types/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    }
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    },
+    "./*": "./dist/*"
   },
-  "main": "dist/index.mjs",
-  "module": "dist/index.mjs",
-  "types": "types/index.d.ts",
-  "browser": "dist/index.js",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "typesVersions": {
     "*": {
       "*": [
-        "./types/*",
-        "./types/index.d.ts"
+        "./dist/*",
+        "./*"
       ]
     }
   },
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "rollup -cw & vite",
     "lint": "eslint src",
     "test": "vitest --no-threads --no-isolate",
-    "build": "vite build && tsc --project tsconfig.build.json",
+    "build": "rimraf dist && rollup -c",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "release": "bumpp package.json --commit \"release: v%s\" --push --all --tag"
   },
   "devDependencies": {
     "@qq15725/eslint-config": "^1.1.0",
-    "@types/node": "^18.14.0",
-    "bumpp": "^8.2.1",
-    "conventional-changelog-cli": "^2.2.2",
-    "eslint": "^8.34.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/node": "^20.10.3",
+    "bumpp": "^9.2.0",
+    "conventional-changelog-cli": "^4.1.0",
+    "eslint": "^8.55.0",
+    "fs-extra": "^11.2.0",
+    "onnxruntime-web": "^1.16.3",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.6.1",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-esbuild": "^6.1.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.2",
-    "vitest": "^0.28.5"
+    "vite": "^5.0.5",
+    "vitest": "^1.0.1"
+  },
+  "peerDependencies": {
+    "onnxruntime-web": "^1.*"
   }
 }
